--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@types/nprogress": "^0.2.0",
+    "axios": "^1.3.4",
     "element-plus": "^2.2.35",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.33",
