--- a/front/package.json
+++ b/front/package.json
@@ -13,8 +13,10 @@
     "@types/nprogress": "^0.2.0",
     "axios": "^1.3.4",
     "element-plus": "^2.2.35",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.33",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "sass": "^1.58.3",
     "vue": "^3.2.45",
     "vue-router": "^4.0.13"
