--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "element-plus": "^2.2.35",
     "lodash-es": "^4.17.21",
+    "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0",
