--- a/front/package.json
+++ b/front/package.json
@@ -19,11 +19,13 @@
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0",
     "sass": "^1.58.3",
+    "sortablejs": "^1.15.0",
     "vue": "^3.2.45",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@types/node": "^18.14.6",
+    "@types/sortablejs": "^1.15.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.3",
     "unplugin-auto-import": "^0.15.1",
