--- a/front/.env.production
+++ b/front/.env.production
@@ -1,3 +1,3 @@
 VITE_APP_TITLE = 'PowerAdmin'
 ENV = 'production'
-VITE_APP_BASE_API = 'https://mock.mengxuegu.com/prod'
+VITE_APP_BASE_API = 'http://123.56.216.221:3000'
