--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
-    "dev": "./node_modules/.bin/nodemon bin/www",
-    "prd": "pm2 start bin/www",
+    "dev": "./node_modules/.bin/nodemon bin/power-admin",
+    "prd": "pm2 start bin/power-admin",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "koa-logger": "^3.2.1",
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
     "log4js": "^6.9.1",
