--- a/server/package.json
+++ b/server/package.json
@@ -10,20 +10,17 @@
   },
   "dependencies": {
     "debug": "^4.1.1",
-    "jsonwebtoken": "^9.0.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
-    "koa-jwt": "^4.0.4",
-    "koa-logger": "^3.2.1",
+    "koa-logger": "^3.2.0",
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
-    "log4js": "^6.9.1",
-    "mongoose": "^7.0.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "require-directory": "^2.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
