feat:注册用户接口、校验器

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,12 @@
       "request": "launch",
       "restart": true,
       "runtimeExecutable": "nodemon",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
       "type": "node"
     }
    
+
   ]
 }
