--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
-    "dev": "./node_modules/.bin/nodemon bin/www",
+    "devv": "./node_modules/.bin/nodemon bin/www",
     "prd": "pm2 start bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "./node_modules/.bin/nodemon app.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "debug": "^4.1.1",
+    "jsonwebtoken": "^9.0.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
@@ -19,8 +22,12 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
+    "lodash": "^4.17.21",
+    "mysql2": "^3.2.3",
     "pug": "^2.0.3",
-    "require-directory": "^2.1.1"
+    "require-directory": "^2.1.1",
+    "sequelize": "^6.31.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
